# VirtualAssistant

./: package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json
src/: api.ts  app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: claude.rs  image_generator.rs  main.rs  pomodoro.rs  weather.rs
src/components/: BlogItem.svelte  CaseStudy.svelte  Claude.svelte  Cursor.svelte  Footer.svelte  FooterNav.svelte  Header.svelte  Heading.svelte  Headlines.svelte  Hero.svelte  ImageGenerator.svelte  Loader.svelte  MessageBar.svelte  Navigation.svelte  Pomodoro.svelte  Popup.svelte  Scrollbar.svelte  Sidebar.svelte  SystemMonitor.svelte  Theme.svelte  Titlebar.svelte  Video.svelte  Weather.svelte  WorkItem.svelte  hover.svelte
src/components/Misc/: Cube.svelte  STLViewer.svelte
src/components/Misc/Accordion/: Accordion.svelte
src/components/Misc/Bento/: BentoOne.svelte
src/components/Misc/Grids/: GridOne.svelte
src/data/: Accordion.ts  Bento.ts  BlogPosts.ts  Grid.ts  Hero.ts  Projects.ts  Reviews.ts  SectionData.ts  workItems.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/3d/: +page.svelte
src/routes/about/: +page.svelte
src/routes/blog/: +page.svelte
src/routes/contact/: +page.svelte
src/routes/gallery/: +page.svelte
src/routes/work/: +page.svelte
src/stores/: themeStore.ts
src/utils/: getIcon.ts  haptic.ts
static/: chair.stl
static/textures/splash/: Chocolate_Splash_Free_002_bcolor.tga  Chocolate_Splash_Free_002_metal.tga  Chocolate_Splash_Free_002_rough.tga
(+7 files in other folders)
