[package]
name = "v1"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "macos-private-api", "window-hide", "window-minimize", "window-unminimize", "window-unmaximize", "window-close", "window-maximize", "window-start-dragging", "window-show", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5.0"
sysinfo = "0.31.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.17.1"
anyhow = "1.0"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
